# azcam-vattspec

./: README.md  pyproject.toml  requirements.txt  requirements_github.txt  setup.cfg
azcam_vattspec/: __init__.py  console.py  console_vattspec.py  index_vattspec.html  server.py  server_vattspec.py  start_azcamtool.py  telescope_vatt.py  telescope_vatt_ascom.py  vatt_filter_code.py
docs/: notes.txt
dspcode/dsppci/: pci2.lod  pci2_host.bat
dspcode/dsptiming/: includes.asm  parallels_rev.asm  s_2_321w.asm  tim2_boot.asm  tim2_boot.ls  tim2_rdccd.asm  waveforms.asm  ypars.asm
dspcode/dsputility/: util2.p0  utilboot2.ls
support/: VattSpec Console.lnk  install.py  ipython_config.py  observing_script_example.txt  parameters_monitor_vatt.ini  setup_time_sync.ps1  start_console_vattspec.py  start_monitor_vattspec.bat  start_monitor_vattspec.py  start_server_vattspec.bat  start_server_vattspec.py  start_server_vattspec_ITL.bat
support/datafolder/parameters/: parameters_console_vattspec.ini
support/desktop/: Start VattSpec.lnk
support/dspcode/dsppci/: pci2.s  pci2_rom.bat  pci2boot.asm  pci2boot.ls
support/dspcode/dsptiming/: Make dsptiming.bat  dacs.asm  int_noise.asm  int_signal.asm  parallels_for.asm  switchstates.asm  tim.lod  tim2.asm  tim2.ls  tim2_common.asm  tim2_hdr.asm
support/dspcode/dsputility/: util2.asm  util2.lod  util2.ls  util2.p1  util2.p2  util2_host.bat  utilboot2.asm
support/parameters/: parameters_console_vattspec.ini  parameters_monitor_vattspec.ini  parameters_server_vattspec.ini
support/templates/: fits_template_vattspec_master.txt
