[tool.poetry]
name = "azcam-vattspec"
version = "22.1"
description = "Azcam extension for VATT VattSpec facility camera"
authors = ["Michael Lesser <mlesser@arizona.edu>"]
license = "LICENSE"
readme = "README.md"
keywords=["ccd", "imaging", "astronomy", "sensors"]
repository = "https://github.com/mplesser/azcam-vattspec/"
documentation = "https://mplesser.github.io/azcam/"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
ipython = "*"
rich = "*"
azcam = "*"
azcam-monitor = "*"
azcam-fastapi = "*"
azcam-arc = "*"
azcam-ds9 = "*"
azcam-imageserver = "*"
azcam-observe = "*"
azcam-focus = "*"
azcam-scripts = "*"
azcam-testers = "*"
azcam-webtools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
