[project]
name = "azcam-vattspec"
version = "22.1.1"
description = "Azcam extension for VATT VattSpec facility camera"
license = {file ="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "ipython",
    "rich",
    "azcam",
    "azcam-monitor",
    "azcam-fastapi",
    "azcam-arc",
    "azcam-ds9",
    "azcam-imageserver",
    "azcam-observe",
    "azcam-focus",
    "azcam-scripts",
    "azcam-testers",
    "azcam-webtools",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam-vattspec/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_vattspec"
