[project]
name = "azcam-vattspec"
version = "23.0"
description = "Azcam extension for VATT VattSpec facility camera"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = ["ipython", "rich", "azcam"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-vattspec/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_vattspec"
